Allow suppressing `FieldSortingCheck` and `PreferRecordCheck`